# cv_optimization

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml  pr.yml
app/: main.py
app/api/middlewares/: correlation.py
app/api/routes/: cv.py
app/core/: config.py  logger.py
app/domain/schemas/: cv.py
app/infra/llm/: provider.py
app/infra/pdf/: extractor.py
app/infra/vectorstore/: chroma.py
app/scripts/: index_knowledge.py
app/services/: cv_optimization_service.py
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml
knowledge/: ats_best_practices.txt  recruiter_guidelines.txt
tests/: conftest.py
tests/unit/infra/: test_chroma_service.py  test_pdf_extractor.py  test_provider.py
tests/unit/services/: test_cv_optimization_service.py
