[project]
name = "cv-optimization"
version = "0.1.0"
description = "LLM based CV optimization tool"
authors = [{ name = "bazzmx"}]
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
    "fastapi>=0.136.3",
    "langchain>=1.3.2",
    "langchain-chroma>=1.1.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "loguru>=0.7.3",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pymupdf>=1.27.2.3",
    "python-multipart>=0.0.29",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.15",
]
